--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="open">open</string>
     <string name="close">close</string>
+    <string name="title">Title</string>
+    <string name="start_writing_here">Start writing here…</string>
+    <string name="add_label">Add Label</string>
 </resources>
