--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="open">open</string>
     <string name="close">close</string>
+    <string name="star_hints">******</string>
+    <string name="_6_digit_code_has_been_sent_to">6 Digit code has been sent to</string>
 </resources>
